<b>2008-10-10</b>

* Problem with "Add and clear" causing double refresh fixed, bug 2139697 presumed closed
* Map no longer redrawn after minor edits

<b>2008-10-04</b>

* Airline search and recording added
* "Analyze" screen for stats added

<b>2008-10-03</b>

* Highlight user-entered airports in pink
* Validity checks for lat,lon,elevation
* Fix bug with loading countries from DAFIF

<b>2008-10-02</b>

* Increased default resolution of GC paths
* Manual implementation of forgotten password requests

<b>2008-10-01</b>

* Fixed major bug preventing new users from entering airlines
* Reload flight list after "delete" from flight list

<b>2008-09-30</b>

* Flights over 2000 mi now drawn as great circle routes, one segment per 1000 mi
* "Stats" renamed as "Top 10"
* Flight list not shown after "Add"

<b>2008-09-28</b>

* Flight editing streamlined: prev/next buttons, list reloading, tracking of changes
* Fixed bug for viewing flights of open trips (/trip/x) when not logged in

<b>2008-09-26</b>

* Airline aliases now supported in DB (eg. Sibir Airlines -> S7 Airlines)
* Fixed duplicate-creating bug when import new airlines
* Corrupt accents fixed by updating PHP scripts to output Latin1 (2074180)

<b>2008-09-25</b>

* Trips can now be deleted

<b>2008-09-21</b>

* "Year" filter added
* Filter selections automatically restricted when a trip is chosen
* Clearing filter in /trip/X mode no longer resets trip
* Add "Delete" option for trips
* FlightMemory import strict date validation implemented
* FlightMemory import now handles distances in km correctly

<b>2008-09-20</b>

* FlightMemory importing implemented
* Rendering up to 100% faster by treating X-Y,Y-X flights as identical
* "Top 10 Routes" now considers X-Y same as Y-X
* Cleaner "News" dialog
* User's other trips no longer shown when viewing a single trip

<b>2008-09-17</b>

* Added Google ads and implemented stack for tracking panes
* Filters for what can be entered in new airports